# mcp-learn

./: .env.example  .gitignore  DEBUG.md  README.md  chainlit_client.py  client.py  client_web.py  composite_server.py  langchain_agent.py  nl2sql_server.py  pyproject.toml  search_server.py  stock_server.py  weather_server.py
agents/: .env.example  agno_agent.py  atomic_agent.py  autogen_agent.py  camel_agent.py  langgraph_agent.py  llamaindex_agent.py  openai_agent.py  pydantic_agent.py  sk_agent.py  smol_agent.py
agents/adk_agent/: agent.py
clients/: .env.example  chainlit_client.py  cmd_client.py  streamlit_client.py
docs/: MCP-Unpacked.md
servers/: .env.example  composite_server.py  news_server.py  nl2sql_server.py  search_server.py  server_config.py  stock_server.py  time_server.py  weather_server.py
usecase/figma/: README.md  index.html
usecase/figma/css/: styles.css
usecase/figma/js/: script.js
