[project]
name = "mcp-learn"
version = "0.1.0"
description = "MCP learn"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chainlit>=2.5.5",
    "colorama>=0.4.6",
    "fastmcp>=2.2.0",
    "mlflow>=2.21.3",
    "openai>=1.75.0",
    "pytz>=2025.2",
    "tenacity>=9.1.2",
    "tiktoken>=0.9.0",
    "yfinance>=0.2.55",
]
